package construccion.factorymethod;

public interface Button {
    void render();
    void onClick();
}
