package construccion.factorymethod;

public enum TypeButton {
    HTML, WINDOW
}
